# Voice-Transcribe

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: get_long_demo.sh
src/scribepad/: cli.py
